--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,8 @@
 ---
-name: Build
+name: Release
 
 on:
   push:
-    branches-ignore:
-      # Release workflow is meant be triggered when pushing to the master branch
-      - master
-  pull_request:
     branches:
       - main
 
@@ -14,6 +10,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -31,3 +29,8 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: build/distributions/*
