Use correct main branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,8 @@ name: Build
 on:
   push:
     branches-ignore:
-      # Release workflow is meant be triggered when pushing to the master branch
-      - master
+      # Release workflow is meant be triggered when pushing to the main branch
+      - main
   pull_request:
     branches:
       - main
