--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,13 +2,12 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types:
+      - published
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -30,7 +29,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Release
+      - name: Upload release assets
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: build/distributions/*
