To detect if a new tag needs to be created whenever the project version changes, set fetch-depth = 0 on 'checkout'

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,15 @@ on:
       - main
 
 jobs:
-  build:
+  build-tag-release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK
         uses: actions/setup-java@v4
