--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 ---
-name: Build and Release
+name: Release
 
 on:
   push:
@@ -7,10 +7,8 @@ on:
       - main
 
 jobs:
-  build-tag-release:
+  release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -28,19 +26,12 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Compile project
+        run: ./gradlew compile
 
       - name: Detect and tag new version
         uses: salsify/action-detect-and-tag-new-version@v2
         with:
-          create-tag: true
           tag-template: v{VERSION}
           version-command: |
             cat gradle.properties| grep -i '^version' | cut -d '=' -f2
-
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          files: build/distributions/*
