Document version change policy

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+# Upon merging a PR into the master branch, an updated version triggers creation of a new Git tag + GitHub Release page
 group=com.github.dkoval
 version=0.1.1
 
